# sandbox

./: .gitignore  README.md  pyproject.toml  release_note.txt
sandbox/: app.py  constants.py  outbound_dialler.py  session.py  user.py  utils.py
sandbox/views/: __init__.py  blocks.py  call_home.py  constants.py  messages_tab.py  session_home.py  session_info.py  session_modal.py  start_home.py  task_home.py
