[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "Generate and log outbound calls and metadata"
authors = ["Manas <kmanas@vernacular.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
rich = "^12.4.4"
pandas = "^1.4.2"
docopt = "^0.6.2"
slack-bolt = "^1.14.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sandbox = "sandbox.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
